--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -38,6 +38,7 @@
     width: 100%;
     background: #FFE0B3;
     border: 1px solid #95A0A7;
+    color: #0E161A;
     border-radius: 0px 0px 8px 8px;
     position: absolute;
     bottom: 0;
