--- a/src/component/Cart/Cart.css
+++ b/src/component/Cart/Cart.css
@@ -1,8 +1,23 @@
-.cart{
+.cart {
     background: rgba(255, 153, 0, 0.3);
     padding: 25px;
-    height: 100vw;
+    /* height: 100vw; */
     position: sticky;
     top: 0;
-    
+
+}
+
+.clear-cart-btn {
+    width: 90%;
+    height: 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #FF3030;
+    font-size: 18px;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 16px;
+    cursor: pointer;
 }
