--- a/src/component/Shop/Shop.css
+++ b/src/component/Shop/Shop.css
@@ -9,3 +9,23 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
 }
+
+.product-link{
+    text-decoration: none;
+}
+
+.product-review-btn{
+    width: 90%;
+    height: 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #FF9900;
+    font-size: 18px;
+    color: white;
+    margin-top: 16px;
+    border: none;
+    border-radius: 4px;
+    padding: 16px;
+    cursor: pointer;
+}
